# c_gwr

./: CMakeLists.txt  README.md  todos.txt
examples/01_window_example/: CMakeLists.txt
examples/02_triangle_example/: CMakeLists.txt  main.c
examples/03_texture_triangle_example/: CMakeLists.txt  main.c
examples/t/: CMakeLists.txt  main.c
include/: gwr.h  gwr_texture.h  gwr_util.h  gwr_vertex_array.h  gwr_vertex_buffer.h
include/internal/: gwr_cap.h  gwr_color.h  gwr_config.h  gwr_draw.h  gwr_element_buffer.h  gwr_info.h  gwr_log.h  gwr_math.h  gwr_shader.h  gwr_util.h  gwr_vertex_array.h  gwr_vertex_buffer.h  gwr_window.h
src/: gwr_cap.c  gwr_draw.c  gwr_element_buffer.c  gwr_info.c  gwr_log.c  gwr_math.c  gwr_shader.c  gwr_texture.c  gwr_vertex_array.c  gwr_vertex_buffer.c  gwr_window.c
